cmake_minimum_required(VERSION 3.22)
project(JUCEExamples)
if (NOT JUCE_FOUND)
  find_package(JUCE CONFIG REQUIRED)
endif ()

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

#add_subdirectory(juce_analytics)
#add_subdirectory(juce_audio_basics)
#add_subdirectory(juce_audio_devices)
#add_subdirectory(juce_audio_formats)
#add_subdirectory(juce_audio_plugin_client)
#add_subdirectory(juce_audio_processors)
#add_subdirectory(juce_audio_utils)
#add_subdirectory(juce_box2d)
#add_subdirectory(juce_core)
#add_subdirectory(juce_cryptography)
#add_subdirectory(juce_data_structures)
#add_subdirectory(juce_dsp)
#add_subdirectory(juce_events)
#add_subdirectory(juce_graphics)
add_subdirectory(juce_gui_basics)
#add_subdirectory(juce_gui_extra)
#add_subdirectory(juce_midi_ci)
#add_subdirectory(juce_opengl)
#add_subdirectory(juce_osc)
#add_subdirectory(juce_product_unlocking)
#add_subdirectory(juce_video)
